WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
151074
Tatechuyoko text is not vertically centered in its vertical advance
https://bugs.webkit.org/show_bug.cgi?id=151074
Summary
Tatechuyoko text is not vertically centered in its vertical advance
Myles C. Maxfield
Reported
2015-11-09 19:17:08 PST
Tatechuyoko text is not vertically centered in its vertical advance
Attachments
Patch
(5.57 KB, patch)
2015-11-09 19:24 PST
,
Myles C. Maxfield
hyatt
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Myles C. Maxfield
Comment 1
2015-11-09 19:24:38 PST
Created
attachment 265138
[details]
Patch
Myles C. Maxfield
Comment 2
2015-11-09 19:25:08 PST
<
rdar://problem/20074305
>
Dave Hyatt
Comment 3
2015-11-10 09:08:36 PST
Comment on
attachment 265138
[details]
Patch r=me
Myles C. Maxfield
Comment 4
2015-11-10 12:05:01 PST
Committed
r192259
: <
http://trac.webkit.org/changeset/192259
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug