Tatechuyoko text is not vertically centered in its vertical advance https://bugs.webkit.org/show_bug.cgi?id=151074 <rdar://problem/20074305>

Reviewed by David Hyatt.

During paint time, the run origin of tatechuyoko needs to be adjusted to compensate for the
rotation of the writing mode. The calculation which performed this adjustment was incorrect.

It is incorrect for two reasons:
1. It used the existing text origin, which had the font's ascent incorporated in it, but did
not compensate by either inspecting the overflow bounds' ascent nor the font's ascent proper.
2. It did not distinguish between the overflow bounds' ascent vs. descent. Instead, it added
them together and treated both values together.

No new tests yet. I need to make a font to test this.

* rendering/InlineTextBox.cpp:
(WebCore::InlineTextBox::paint):
* rendering/RenderCombineText.cpp:
(WebCore::RenderCombineText::computeTextOrigin):
(WebCore::RenderCombineText::combineText):
(WebCore::RenderCombineText::adjustTextOrigin): Deleted.
* rendering/RenderCombineText.h:

Canonical link: https://commits.webkit.org/169299@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@192259 268f45cc-cd09-0410-ab3c-d52691b4dbfc